[tool.poetry]
name = "slaid"
version = "0.1.0"
description = "Simple Log Analysis and Intrusion Detection tool"
authors = ["snypnus"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
